--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~10.0.14",
     "@fortawesome/fontawesome-free": "^5.15.1",
     "rxjs": "~6.5.5",
+    "express": "^4.17.1",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
